# auto_plant_watering-fw

./: LICENSE
docs/: Pump scale.odt
project/: CMakeLists.txt  project.code-workspace
project/application/: main.c
project/common/: common.h
project/drivers/: ch552_driver_conf.h
project/drivers/ch552/inc/: ch552.h  ch552_adc.h  ch552_dataflash.h  ch552_gpio.h  ch552_pwm.h  ch552_sys.h  ch552_timer.h  ch552_uart.h
project/drivers/ch552/src/: ch552_adc.c  ch552_dataflash.c  ch552_gpio.c  ch552_pwm.c  ch552_sys.c  ch552_timer.c  ch552_uart.c
